<resources>

    <string name="app_name">XmutEMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_title">教务管理</string>
    <string name="anim_slide">Slide Up</string>
    
    <!-- Menu -->
    <string name="menu">菜单</string>
    <string name="notification">通知</string>
    <string name="curriculum">课程表</string>
    <string name="score">成绩</string>
    <string name="course">选课</string>
    <string name="exam">考试</string>
    <string name="userPortrait">头像</string>
    <string name="settings">设置</string>
    <string name="feedback">反馈</string>
    
    <!-- Login -->
    <string name="login">登录</string>
	<string name="stuNOHint">你的学号</string>
	<string name="stuPasswordHint">你的密码</string>
	<string name="checkCode">验证码</string>
	<string name="submit">登录</string>
</resources>